Fixed spacing issues

--- a/assets/LESS/mid-content.less
+++ b/assets/LESS/mid-content.less
@@ -26,6 +26,8 @@
   .imgList {
     .send, .peers, .instant {
       .flex(space-between);
+      border-bottom: 3px dashed @bg-color;
+      padding-bottom: 40px;
       margin-bottom: 50px;
 
       h2 {
