--- a/assets/LESS/testimonials.less
+++ b/assets/LESS/testimonials.less
@@ -1,4 +1,13 @@
 .test {
+
+  h2 {
+    font-size: 40px;
+    font-family: @header-font;
+    text-align: center;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    border-bottom: 1px dashed black;
+  }
   .person {
     border: 2px solid @bg-color;
     border-radius: 10px;
@@ -8,16 +17,19 @@
 
     .person-img {
       .flex(center, center);
+
+      p {
+        margin-right: 20px;
+        line-height: 2;
+      }
     }
 
     img {
       border-radius: 50%;
-      margin-top: 10px;
-      margin-left: 20px;
+      margin: 20px 20px;
     }
 
     p {
-      display: inline-block;
       line-height: 2;
     }
 
